--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
+  "name": "codersresources-backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "build": "node ./server.js"
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
