--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codersresources-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
