--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,22 @@
 {
   "name": "backend",
-  "version": "1.0.50",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "build": "",
-    "start": "bun run src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "tsc && node dist/index.js"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
-    "@types/cors": "^2.8.18",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "elysia": "latest",
+    "@elysiajs/node": "^1.2.6",
+    "@elysiajs/swagger": "^1.3.0",
+    "elysia": "1.2.25",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+    "@types/node": "latest",
+    "tsx": "latest",
+    "typescript": "latest"
+  }
 }
