--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/node": "^1.2.6",
     "@elysiajs/swagger": "^1.3.0",
-    "elysia": "1.2.25",
+    "elysia": "^1.3.1",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
