--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "ts-node -r tsconfig-paths/register src/index.ts"
+    "start": "tsc && node dist/index.js"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/node": "^1.2.6",
     "@elysiajs/swagger": "^1.3.0",
-    "elysia": "^1.3.1",
+    "elysia": "1.2.25",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
