--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/node": "^1.2.6",
     "@elysiajs/swagger": "^1.3.0",
+    "dotenv": "^16.5.0",
     "elysia": "1.2.25",
     "mongoose": "^8.15.0"
   },
